tests/language/negative/global_var.js
// ERROR: accessing global variable
function dirty() {
    return someGlobal;
}
dirty()
